 - GBA Memory: Return correct byte for odd ROM open bus addresses
 - GBA Serialize: Fix alignment check when loading states
 - GBA SIO: Fix copying Normal mode transfer values
 - GBA SIO: Fix Normal mode being totally broken (fixes mgba.io/i/1800)
 - GBA SIO: Fix deseralizing SIO registers
 - GBA SIO: Fix hanging on starting a second multiplayer window (fixes mgba.io/i/854)
 - GBA Timers: Fix toggling timer cascading while timer is active (fixes mgba.io/i/2043)
 - GBA Video: Latch scanline at end of Hblank (fixes mgba.io/i/1319)
 - GBA Video: Fix Hblank timing
 - GBA Video: Implement green swap (fixes mgba.io/i/1609)
 - GBA Video: Emulate sprite cycle limits in OpenGL renderer (fixes mgba.io/i/1635)
 - GBA Video: Fix OBJWIN erratic rendering in OpenGL renderer
 - SM83: Emulate HALT bug
Other fixes:
 - 3DS: Fix thread cleanup
 - All: Improve export headers (fixes mgba.io/i/1738)
 - Cheats: Fix indirect write cheats (fixes mgba.io/i/2026)
 - CMake: Fix build with downstream minizip that exports incompatible symbols
 - CMake: Link with correct OpenGL library (fixes mgba.io/i/1872)
 - Core: Ensure ELF regions can be written before trying
 - Core: Fix threading improperly setting paused state while interrupted
 - Core: Fix loading ELF files that have unexpected empty program headers
 - Debugger: Don't skip undefined instructions when debugger attached
 - Debugger: Close trace log when done tracing
 - Debugger: Fix change watchpoints (fixes mgba.io/i/1947)
 - FFmpeg: Fix some small memory leaks
 - FFmpeg: Fix encoding of time base
 - GB Video: Fix SGB video logs
 - GBA: Fix loading multiboot ELF files (fixes mgba.io/i/1949)
 - mGUI: Don't attempt to preload files larger than can fit in RAM
 - Qt: Force OpenGL paint engine creation thread (fixes mgba.io/i/1642)
 - Qt: Fix static compilation in MinGW (fixes mgba.io/i/1769)
 - Qt: Fix a race condition in the frame inspector
 - Qt: Load/save bytes from memory viewer in the order visible (fixes mgba.io/i/1900)